--- a/industryinc/css/style.css
+++ b/industryinc/css/style.css
@@ -1275,7 +1275,7 @@ ol {
   height: 100%;
   left: 0;
   top: 0;
-  border: 2px solid #e3f0fa;
+  /* border: 2px solid black; */
   opacity: 1;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
