made some changes product

--- a/industryinc/css/style.css
+++ b/industryinc/css/style.css
@@ -1319,7 +1319,7 @@ ol {
  --------------------*/
 
 .services-2-section {
-  padding-bottom: 50px;
+  /* padding-bottom: 50px; */
 }
 
 .service-text {
